# egui_brew

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish_to_release.yml
src/: app.rs  homebrew.rs  lib.rs  main.rs
src/app/: app_icon.rs  central_panel.rs  left_panel.rs  mainapp.rs  packagelist.rs  packagelist_loader.rs  top_panel.rs
src/brew_cli/: commands.rs
src/homebrew/: async_loader.rs  brew_cli.rs  cli_handle.rs  formule_info_model.rs  package_brief_list.rs  package_filter.rs  package_info_model.rs  package_model.rs  package_name_list.rs  packagelist.rs  packagelist_loader.rs  pkg_cli_handle.rs
