[package]
name = "brew_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24"
egui = "0.24"
egui_extras = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = [
    "process",
    "rt",
    "macros",
    "rt-multi-thread",
] }
