[package]
name = "egui_brew"
version = "0.2.0"
edition = "2021"
description = "A macOS GUI application for package manager Homebrew which is based on egui."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
eframe = "0.24"
egui = "0.24"
egui_extras = "0.24.0"
image = "0.24.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = [
    "process",
    "rt",
    "macros",
    "rt-multi-thread",
    "io-util",
] }

[package.metadata.bundle]
name = "EGUI_Brew"
identifier = "com.suisuishou.eguibrew"
icon = ["assets/icons/beer-mug_1f37a.png"]
version = "0.1.0"
category = "Developer Tool"
